# weekly-ai-agents-report

./: AGENT.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: HOMEBREW.md
src/weekly_ai_agents_report/: __init__.py  cli.py  core.py
tests/: test_core.py
